--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,11 @@ body {
   align-items: center;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
+  flex-direction: column;
 }
 
 .container {
-  height: 800px;
+  height: 400px;
   width: 100%;
   color: white;
   text-align: center;
@@ -37,4 +38,11 @@ span {
   width: 120px;
   height: 40px;
   font-size: 1rem;
+}
+
+.form-container {
+  width: 100%;
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
 }
